# hackernews-sycamore

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index-541e6eed90b23e79.js  index-541e6eed90b23e79_bg.wasm  index-596ddd2076691fb.js  index-596ddd2076691fb_bg.wasm  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.css
.github/workflows/: deploy.yml
src/: main.rs
src/apis/: mod.rs  types.rs
src/components/: comment.rs  footer.rs  header.rs  mod.rs  show_stories.rs
src/pages/: item.rs  mod.rs  stories.rs  user.rs
