[package]
name = "hackernews-sycamore"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
async-recursion = "0.3.2"
chrono = { version = "0.4.19", features = ["serde", "wasmbind"] }
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
futures = "0.3.17"
#log = "0.4.14"
reqwasm = "0.2.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
sycamore = { version = "0.6.3"  }
sycamore-router = { version = "0.6.3" }
web-sys = { version = "0.3.55", features = ["Url"] }
wasm-bindgen-futures = "0.4.28"